--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ gunicorn==20.1.0
 Jinja2==3.0.3
 limits==2.0.3
 psycopg2==2.9.2
+python-binary-memcached==0.30.1
 redis==4.0.2
 requests[security]==2.26.0
 sendgrid==6.9.2
