--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ python-binary-memcached==0.30.1
 redis==4.0.2
 requests[security]==2.26.0
 sendgrid==6.9.2
+sentry-sdk[flask]==1.20.0
 shortuuid==1.0.8
 SQLAlchemy==1.4.27
 Werkzeug==2.0.2
