--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask-Compress==1.10.1
 Flask-Limiter==2.0.2
 Flask-SQLAlchemy==2.5.1
+flask-talisman==1.0.0
 Flask==2.0.2
 gunicorn==20.1.0
 Jinja2==3.0.3
